$2014 ThisTab - tags overflow & maxHeight Fix

--- a/partials/global-styles/selects.scss
+++ b/partials/global-styles/selects.scss
@@ -843,6 +843,8 @@
     }
 
     &-list {
+      max-height: 172px;
+      overflow-x: hidden;
       padding-bottom: 0;
       padding-top: 0;
     }
